fix(Tinebase/css): dark mode color for selected grid cell

--- a/tine20/Tinebase/css/darkmode.less
+++ b/tine20/Tinebase/css/darkmode.less
@@ -134,6 +134,10 @@ body.dark-mode {
     }
   }
 
+  .x-grid3-cell-selected span{
+    color:#ffffff !important;
+  }
+
   /* TOOLBAR */
   .x-toolbar {
     background-color: #e2e2e2;
